# arcade-haskell

./: .gitignore  README.md  simple_cabal_haskell_environment_ubuntu18-04.sh
Menu/: Menu.cabal
Menu/src/: Game.hs  Main.hs  Menu.hs  Window.hs
RunAndTag/: ChangeLog.md  LICENSE  RunAndTag.cabal  cabal.sandbox.config
RunAndTag/.cabal-sandbox/lib/x86_64-linux-ghc-8.0.2/bmp-1.2.6.3-43OLkH0uuwm831pBFpx2PZ/Codec/: BMP.dyn_hi  BMP.hi
RunAndTag/.cabal-sandbox/lib/x86_64-linux-ghc-8.0.2/gloss-1.13.0.1-6KmbsRabLIRDsLA4qPi6zl/Graphics/: Gloss.dyn_hi  (+1 more)
RunAndTag/.cabal-sandbox/x86_64-linux-ghc-8.0.2-packages.conf.d/: bmp-1.2.6.3-43OLkH0uuwm831pBFpx2PZ.conf  gloss-1.13.0.1-6KmbsRabLIRDsLA4qPi6zl.conf  gloss-rendering-1.13.1.1-AfTIkhXCIS4Ai29kYoqO2D.conf  package.cache
RunAndTag/src/: Main.hs
Snake/: .gitignore  ChangeLog.md  LICENSE  Main.hs  cabal.sandbox.config  pp.cabal
Snake/.cabal-sandbox/: world
Snake/.cabal-sandbox/x86_64-linux-ghc-8.0.2-packages.conf.d/: bmp-1.2.6.3-43OLkH0uuwm831pBFpx2PZ.conf  gloss-1.13.0.1-6KmbsRabLIRDsLA4qPi6zl.conf  gloss-rendering-1.13.1.1-AfTIkhXCIS4Ai29kYoqO2D.conf  package.cache
Tamagotchi/: Tamagotchi.cabal
Tamagotchi/src/: Game.hs  Main.hs  Tamagotchi.hs  Window.hs  teste.txt
pong/: CHANGELOG.md  Main.hs  cabal.sandbox.config  pong.cabal
pong-haskell/: CHANGELOG.md  Main.hs  pong-haskell.cabal
pong-haskell/src/: PongBoard.hs  PongCollision.hs  PongEventHandler.hs  PongMovement.hs  PongRender.hs
pong/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
(+256 files in other folders)
