name:                Tamagotchi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Tamagotchi#readme
license:             BSD3
license-file:        LICENSE
author:              Guilherme aguiar
maintainer:          gui9627oli@gmail.com
copyright:           2019 Guilherme aguiar
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Tamagotchi
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, gloss
